<resources>

    <string name="app_name">ToDoList</string>

    <string name="add_new_item">Add new task</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_item">NewItem</string>
    <string name="title_activity_edit_item">Edit item</string>

    <string name="title">Title</string>
    <string name="title_hint">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">Task description</string>
    <string name="priority">Priority</string>

    <string name="priority_label">Set priority</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>

    <string name="add">Add</string>
    <string name="edit">Save changes</string>

    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>

</resources>
